# NeptuneCC

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  glue.md  overlap.md  pragmas.md  schedule.md  testing.md
docs/experiments/: 2026-01-29-halide-tiling.md  2026-01-29-halide-tuning-boundary2d.md  2026-01-29-halide-tuning-boundary3d.md  2026-01-29-halide-tuning-v2.md  2026-01-29-halide-tuning.md  2026-01-30-halide-tiling.md  2026-01-30-halide-tuning-boundary2d.md  README.md
include/: CMakeLists.txt
include/Passes/: NeptuneIRPasses.h  NeptuneIRPasses.td  NeptuneIRPassesPipeline.h
include/Runtime/: NeptuneHaloRuntime.h
include/Utils/: FuncNameHelper.h  NeptuneIRVerifierUtils.h  NeptuneScheduleDebug.h
lib/: CMakeLists.txt
lib/Frontend/Clang/: CMakeLists.txt  NeptuneBinder.cpp  NeptuneGlueGen.cpp  NeptuneMLIRGen.cpp  NeptuneManifest.cpp  NeptunePragma.cpp
lib/Passes/: CMakeLists.txt  NeptuneIREmitCHalide.cpp  NeptuneIRInferHalideSchedule.cpp  NeptuneIRInferOverlapStrategy.cpp  NeptuneIRNormalizeApply.cpp  NeptuneIRSplitDomain.cpp  NeptuneIRVerifyForms.cpp  SCFBoundarySimplify.cpp  SCFToNeptuneIR.cpp
lib/Pipeline/: CMakeLists.txt  NeptuneIRPassesPipeline.cpp
lib/Runtime/: CMakeLists.txt  NeptuneHaloRuntime.cpp
lib/Utils/: CMakeLists.txt  NeptuneScheduleDebug.cpp
scripts/: build.sh
test/: lit.cfg.py
test/case_test/: README.md
test/mlir_tests/: scf_to_neptuneir_2d_stencil.mlir  smoke_emitC_for_apply.mlir
test/smoke_tests/: neptuneir_emitc_halide.mlir  pragma_kernel_block.cpp  scf_to_neptuneir_2d_stencil.mlir  smoke.sh  smoke_apply.sh  (+7 more)
tools/: CMakeLists.txt
tools/neptune-cc/: CMakeLists.txt  main.cpp
(+55 files in other folders)
